# tsimg

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  spice_manifest.txt  tsimg.manifest  version.rc
example/: linhaca_ndvi_comparison.html
src/: build_info.h  image_utils.cpp  image_utils.h  main.cpp  main.cpp.dump  spice_constructor.cpp  spice_object.h  template_writer.cpp  template_writer.h  tsimg.cpp  tsimg.h  tsimg_gif.cpp  tsimg_gif.h  tsimg_spice.cpp  tsimg_spice.h
templates/: template.html  template_vs.html
utils/: generate_build_info.py
